--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,16 @@ name=java
 #spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2008Dialect
 
-#Postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/Security
+##Postgres local
+#spring.datasource.url=jdbc:postgresql://localhost:5432/Security
+#spring.datasource.username=postgres
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=org.postgresql.Driver
+
+#Postgres docker
+spring.datasource.url=jdbc:postgresql://localhost:5433/Testpg
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
