--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ name=java
 #spring.datasource.driver-class-name=org.postgresql.Driver
 
 #Postgres docker
-spring.datasource.url=jdbc:postgresql://localhost:5433/Testpg
+spring.datasource.url=jdbc:postgresql://192.168.123.95:5433/Testpg
 spring.datasource.username=postgres
 spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
